--- a/server/package.json
+++ b/server/package.json
@@ -5,16 +5,24 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "task-manager",
     "kanban",
-    "pyme"
+    "pyme",
+    "express",
+    "mongodb",
+    "rest-api"
   ],
-  "author": "",
+  "author": "Alvaro Condorí <condorialvaro95@gmail.com>",
   "license": "MIT",
   "type": "commonjs",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
