--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.23",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "cssnano": "^7.1.2",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
